# src/main/kotlin/com/mvnh/entities/account/AccountChangeNickname.kt
@@ -1,0 +1,7 @@
+package com.mvnh.entities.account
+
+import kotlinx.serialization.SerialName
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class AccountChangeNickname(val token: String, @SerialName("new_nickname") val newNickname: String)
